# ign-common

./: BUILD.bazel  Changelog.md
av/: BUILD.bazel
av/src/: AudioDecoder.cc  Video.cc  VideoEncoder.cc
events/: BUILD.bazel
examples/: CMakeLists.txt  README.md
graphics/: BUILD.bazel
graphics/include/ignition/common/: Animation.hh  MeshLoader.hh
graphics/src/: Animation.cc  Animation_TEST.cc  ColladaLoader.cc  ColladaLoader_TEST.cc  Skeleton.cc  SkeletonAnimation.cc
include/ignition/common/: Plugin.hh  PluginInfo.hh  PluginLoader.hh  PluginPtr.hh  SpecializedPlugin.hh
include/ignition/common/detail/: PluginMacros.hh  PluginPtr.hh  SpecializedPlugin.hh
src/: CMakeLists.txt  Filesystem.cc  SystemPaths.cc  URI.cc
test/data/drill/meshes/: drill.dae
test/integration/: CMakeLists.txt  mesh_loader_locale.cc  plugin.cc
test/performance/: CMakeLists.txt
